clusters/main/kubernetes/system/longhorn/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn
  namespace: longhorn-system
  annotations:
    nginx.ingress.kubernetes.io/custom-http-errors: "599"
    nginx.ingress.kubernetes.io/auth-method: 'GET'
    nginx.ingress.kubernetes.io/auth-url: "http://authelia.authelia.svc.cluster.local:9091/api/verify"
    nginx.ingress.kubernetes.io/auth-signin: 'https://auth.${DOMAIN_2}/?rm=$request_method'
    nginx.ingress.kubernetes.io/preserve-trailing-slash: "true"
    #nginx.ingress.kubernetes.io/auth-signin: "https://auth.${DOMAIN_2}/?rd=https://$host$escaped_request_uri"
    nginx.ingress.kubernetes.io/auth-response-headers: 'Remote-User,Remote-Name,Remote-Groups,Remote-Email'
    cert-manager.io/cluster-issuer: general-le-prod
    cert-manager.io/private-key-rotation-policy: Always
spec:
  ingressClassName: "internal"
  rules:
  - host: longhorn.${DOMAIN_2}
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
  tls:
    - hosts:
      - longhorn.${DOMAIN_2}
      secretName: longhorn-tls-0
